Fixed card spacing
added margins to the card data

--- a/static/classmates.scss
+++ b/static/classmates.scss
@@ -1,20 +1,21 @@
 .classmates {
 	display: flex;
 	justify-content: center;
+	flex-wrap: wrap;
 	
 	.contact_card {
 		background: #f5f5f5;
-		height: 15em;
-		width: 30em;
-		margin: 2em;
+		height: 12em;
+		width: 24em;
+		margin: 1em;
 		
 		.person_name {
 			text-align: center;
 			background: #87AD3C;
 			height: 2em;
 			color: #fff;
+			line-height: 2em;
 			font-size: 1.5em;
-			margin: 0 0 2em 0;
 			
 			.card_icon {
 				width: 4em;
@@ -26,8 +27,14 @@
 			}
 		}
 		
-		ul {
-			list-style: none;
+		.person_info {
+			margin: 1em 1em 0;
+			font-size: .9em;
+		
+			ul {
+				list-style: none;
+				line-height: 1.25em;
+			}
 		}
 	}
 }
